# aoc_2022

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  justfile  test.lua
src/: lib.rs  main.rs
src/day/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  mod.rs
src/input/: mod.rs
templates/: day.rs  test.rs
tests/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs
