[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"
default-run = "aoc_2022"
include = ["src/**/*", "README.md", "build.rs"]

[dependencies]
aoc_core = { path = "./aoc_core" }
automod = { git = "https://github.com/isavegas/automod" }
bitflags = "1.3.2"

[build-dependencies]
aoc_core = { path = "./aoc_core" }
